# vodolavr-com

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: pr-checks.yml  push-checks.yml
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/about/: page.tsx
app/canvas/builder/: page.tsx
app/canvas/journey/: page.tsx
app/cases/[id]/: page.tsx
app/cases/ai-quality-control/: page.tsx
app/cases/aisle-wanderer/: page.tsx
app/cases/chain-insight/: page.tsx
app/cases/customer-sentiment-analysis/: page.tsx
app/cases/document-processing/: page.tsx
app/cases/offline-clickstream/: page.tsx
app/cases/phantom-growth/: page.tsx
app/cases/recommendation-engine/: page.tsx
app/cases/retail-ai-assistant/: page.tsx
app/cases/signal/: page.tsx
app/cases/supply-chain-optimization/: page.tsx
app/cases/true-sentiment/: page.tsx
app/cases/workflow-automation/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: navbar.tsx  particle-background.tsx
public/: llms.txt  robots.txt
src/: __init__.py
tests/: test_imports.py
